# MCP_prompt_broker

./: .gitignore  README.md  companion-instructions.md  install.ps1  jest.config.js  optuna_best_params.json  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json
.github/agents/: companion-agent.json  companion-instructions.md
.github/copilot/: instructions.md
copilot-profiles/: api-design.md  code-review.md  testing.md
demos/codex_cli_toy_model/: README.md  requirements.txt  run_toy_model.py
docs/: DEVELOPER_GUIDE.md  HYBRID_ROUTING_CHECKLIST.md  HYBRID_ROUTING_DEPENDENCY_MAP.md  HYBRID_ROUTING_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  MCP_SERVER_TESTING_PROFILE.md  README.md  REPORTS_INDEX.md  USER_GUIDE.md  WORKSPACE_OVERVIEW.md
docs/api/: CLI_REFERENCE.md  MCP_TOOLS.md  PROFILES_SCHEMA.md
docs/architecture/: ARCHITECTURE.md  DATA_FLOW.md  INTEGRATION.md
docs/modules/: CODEX_ORCHESTRATOR.md  LLAMA_CPP_SERVER.md  LLAMA_ORCHESTRATOR.md  MCP_PROMPT_BROKER.md
example/sklearn_toy_model/: __init__.py  requirements.txt
examples/sklearn_toy_model/: README.md  linear_regression_model.joblib  optuna_tune.py  train_classification.py
infrastructure/llama-cpp-server/: config.gemma4-26b-a4b.json  config.json  start-server.ps1
infrastructure/pi-network/: README.md  docker-compose.yml  quick-start.ps1  start-pi-node.ps1  start-testnet.ps1  test-connection.ps1  test-node.ps1
llama-cpp-server/: README.md  test-api.ps1
llama-orchestrator/: .coverage  .gitignore
llama-orchestrator/bins/: registry.json
llama-orchestrator/docs/: CHECKLIST.md  LLAMA_VERSION_SCALING_CHECKLIST.md
llama-orchestrator/tests/: test_engine.py  test_loader.py
mcp-codex-orchestrator/: .gitignore  README.md  pyproject.toml
mcp-codex-orchestrator/docker/: Dockerfile.orchestrator
mcp-codex-orchestrator/docs/: IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  TROUBLESHOOTING.md
mcp-codex-orchestrator/runs/: .gitkeep
mcp-codex-orchestrator/schemas/: code_change.json
mcp-codex-orchestrator/scripts/: setup-auth.ps1
mcp-codex-orchestrator/src/mcp_codex_orchestrator/: __main__.py  server.py
mcp-codex-orchestrator/src/mcp_codex_orchestrator/models/: __init__.py  run_request.py  run_result.py
mcp-codex-orchestrator/src/mcp_codex_orchestrator/orchestrator/: docker_client.py  run_manager.py
mcp-codex-orchestrator/src/mcp_codex_orchestrator/security/: modes.py  sandbox.py
mcp-codex-orchestrator/src/mcp_codex_orchestrator/tools/: __init__.py  codex_cancel.py  codex_run.py  codex_status.py
mcp-codex-orchestrator/src/mcp_codex_orchestrator/verify/: build_runner.py  verify_loop.py
mcp-codex-orchestrator/tests/: conftest.py  test_models.py  test_result_collector.py  test_run_manager.py
mcp_codex_orchestrator/: __init__.py
reports/: 02_oprava_mcp_server.md  06_implementacni_plan_vscode.md  10_registry_refactoring_evaluation.md  15_routing_efficiency_analysis.md  16_llama_cpp_server_installation.md  18_llama_orchestrator_implementation_plan.md  20_profile_routing_analysis_and_recommendations.md  21_codex_orchestrator_v2_checklist.md  21_codex_orchestrator_v2_implementation_plan.md  22_codex_readonly_filesystem_fix.md  22_complexity_routing_checklist.md  22_complexity_routing_implementation_plan.md  23_docker_permission_denied_fix.md  24_directory_restructure_checklist.md  24_directory_restructure_implementation_plan.md  25_complexity_routing_score_ratio_analysis.md  25_keyword_inheritance_checklist.md  25_keyword_inheritance_implementation_plan.md  26_directory_restructure_fix_implementation_plan.md  27_pi_network_node_docker_setup.md  codex_orchestrator_gemini_delegation_report.md  delegated_task_runner_tool_pick_rate_update_report.md  gemini_runner_implementation_report.md
runs/1c31aabe-daa5-4c33-8c54-ba9eed207563/: log.txt  request.json  result.json
runs/e0f1bbc4-93f7-4074-aa4e-2badad54236a/: request.json  result.json
scripts/: install.ps1
shared/: README.md
sklearn_toy_model/: README.md  main.py
src/: index.ts  parser.ts  profile-manager.ts
src/config/: profiles.py
src/mcp_prompt_broker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  (+1 more)
tests/: conftest.py  mcp_server_validation_report.json  parser.test.ts  profile-manager.test.ts  test_codex_integration.py  test_codex_prompt_routing.py  test_complexity_routing.py  test_keyword_inheritance.py  test_metadata_parser.py  test_parser.py  test_profile_parser.py  test_profile_router.py  test_testing_profile_routing.py
(+79 files in other folders)
