[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-prompt-broker-workspace"
version = "0.1.0"
description = "MCP Prompt Broker Monorepo Workspace"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Workspace nemá vlastní dependencies - jen dev tools
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
    "mypy>=1.0",
]

# UV workspace configuration
[tool.uv.workspace]
members = [
    "packages/mcp-prompt-broker",
    "packages/llama-orchestrator", 
    "packages/mcp-codex-orchestrator",
]

[tool.pytest.ini_options]
testpaths = ["packages/mcp-prompt-broker/tests", "tests"]
pythonpath = ["packages/mcp-prompt-broker/src", "packages/llama-orchestrator/src", "packages/mcp-codex-orchestrator/src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

