[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-codex-orchestrator"
version = "2.0.0-alpha"
description = "MCP server for orchestrating OpenAI Codex CLI runs in Docker containers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MCP Prompt Broker Team"}
]
keywords = ["mcp", "codex", "docker", "orchestrator", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "docker>=7.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "structlog>=24.0.0",
    # v2.0 dependencies
    "jsonlines>=4.0.0",
    "jsonschema>=4.21.0",
    "gitpython>=3.1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-codex-orchestrator = "mcp_codex_orchestrator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_codex_orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
